--- a/trms-front/HTML/index.html
+++ b/trms-front/HTML/index.html
@@ -3,21 +3,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Home">
-    <title>TRMS | Home</title>
+    <title>TRMS</title>
     <link rel="stylesheet" href="../css/trms-html.css">
     <script defer src="../javascript/set_up.js"></script>
+    <script defer src="../javascript/home.js"></script>
     <script defer src="../javascript/requests.js"></script>
-    <script defer src="../javascript/Welcome.js"></script>
-    <script defer src="../javascript/addrequests.js"></script>
-   
   </head>
   <body>
     <nav id="nav">
     </nav>
     <main>
-        <h2>Tuition Reimbursement Management System (TRMS)</h2>
+        <h2>Tuition Reimbursement Management System Portal</h2>
         <div id="info"></div>
-        <h3>Reimbursement Requests</h3>
+        <h3>All Reimbursement Requests</h3>
             <table id="allReqs">
                 <tr>
                     <th>Reimbursement ID</th>
@@ -39,5 +37,3 @@
         <p>&copy; Francisco Ponce, Based on Design By Sierra Nicholes</p>
     </footer>
   </body>
-
-</html>
