--- a/trms-front/HTML/myrequests.html
+++ b/trms-front/HTML/myrequests.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>TRMS | My Requests</title>
+        <title>TRMS | My Reimbursements</title>
         <link rel="stylesheet" href="../css/trms-html.css">
         <script defer src="../javascript/set_up.js"></script>
         <script defer src="../javascript/myrequests.js"></script>
@@ -10,7 +10,7 @@
         </nav>
         <main>
             <h3>My Reimbursements</h3>
-            <p>Your created reimbursements can be viewed here.</p>
+            <p>Any created reimbursement requests, can be viewed here.</p>
             <table id="individualsReqs">
                 <tr>
                     <th>Reimbursement ID</th>
