cuc/selenium still failing, but everything else is running

--- a/trms-front/HTML/index.html
+++ b/trms-front/HTML/index.html
@@ -8,12 +8,13 @@
     <script defer src="../javascript/set_up.js"></script>
     <script defer src="../javascript/home.js"></script>
     <script defer src="../javascript/requests.js"></script>
+    <script src="../javascript/addreqs.js"></script>
   </head>
   <body>
     <nav id="nav">
     </nav>
     <main>
-        <h2>Tuition Reimbursement Management System Portal</h2>
+        <h2>Tuition Reimbursement</h2>
         <div id="info"></div>
         <h3>All Reimbursement Requests</h3>
             <table id="allReqs">
