brushing code up

--- a/trms-front/HTML/addreqs.html
+++ b/trms-front/HTML/addreqs.html
@@ -65,7 +65,7 @@
 
 
     <footer id="footer">
-      <p>&copy; Francisco Ponce, Based on Design By Sierra Nicholes</p>
+      <p>&copy; Francisco Ponce, Initial Design By S.Nicholess</p>
   </footer>
 </body>
 
