--- a/trms-front/HTML/index.html
+++ b/trms-front/HTML/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Home">
-    <title>TRMS</title>
+    <title>TRMS | Tuition Reimbursement Management System</title>
     <link rel="stylesheet" href="../css/trms-html.css">
     <script defer src="../javascript/set_up.js"></script>
     <script defer src="../javascript/home.js"></script>
@@ -14,9 +14,9 @@
     <nav id="nav">
     </nav>
     <main>
-        <h2>Tuition Reimbursement</h2>
+        <h2>All Reimbursements</h2>
         <div id="info"></div>
-        <h3>All Reimbursement Requests</h3>
+        <h3>Reimbursement Requests</h3>
             <table id="allReqs">
                 <tr>
                     <th>Reimbursement ID</th>
@@ -35,6 +35,6 @@
             </table>
     </main>
     <footer id="footer">
-        <p>&copy; Francisco Ponce, Based on Design By Sierra Nicholes</p>
+        <p>&copy; Francisco Ponce, Initial Design By S.Nicholess</p>
     </footer>
   </body>
