--- a/trms-front/HTML/myrequests.html
+++ b/trms-front/HTML/myrequests.html
@@ -28,7 +28,7 @@
             </table>
         </main>
         <footer id="footer">
-            <p>&copy; Francisco Ponce, Based on Design By Sierra Nicholes</p>
+            <p>&copy; Francisco Ponce, Initial Design By S.Nicholess</p>
         </footer>
     </body>
 </html>
