--- a/trms-front/HTML/requests.html
+++ b/trms-front/HTML/requests.html
@@ -36,7 +36,7 @@
             </section>
         </main>
         <footer id="footer">
-           trms
+            <p>&copy; Francisco Ponce, Initial Design By S.Nicholess</p>
         </footer>
     </body>
 </html>
